# HIDProjector

./: CMakeLists.txt  client.c  client.cpp  common.c  common.cpp  hidp.h  hidp_client.cc  hidp_common.cc  hidp_common.h  hidp_device.cc  hidp_device.h  hidp_net.cc  hidp_net.h  hidp_proto.cc  hidp_proto.h  hidp_server.cc  hidp_test.cc  server.c  server.cpp
prototype_gen1/: common.cpp
