cmake_minimum_required(VERSION 3.16)
project(HIDProjector)
find_package(PkgConfig REQUIRED)
pkg_check_modules(LIBUDEV REQUIRED libudev)

if (WITH_SERVER)
  message("Building server")
  # pkg_check_modules(LIBEVDEV REQUIRED libevdev)
  add_executable(hidpservd server.cpp common.cpp)
  target_include_directories(hidpservd PUBLIC ${LIBUDEV_INCLUDE_DIRS})
  target_link_libraries(hidpservd ${LIBUDEV_LIBRARIES})
endif()

if (WITH_CLIENT)
  message("Building client")
  add_executable(hidpclient client.cpp common.cpp)
  target_include_directories(hidpclient PUBLIC ${LIBUDEV_INCLUDE_DIRS})
  target_link_libraries(hidpclient ${LIBUDEV_LIBRARIES})
endif()

if (WITH_TEST)
  message("Building test")
  add_executable(hid_cat_test test.cpp)
  target_include_directories(hid_cat_test PUBLIC ${LIBUDEV_INCLUDE_DIRS})
  target_link_libraries(hid_cat_test ${LIBUDEV_LIBRARIES})
endif()
