cmake_minimum_required(VERSION 3.16)
project(HIDProjector)
find_package(PkgConfig REQUIRED)
pkg_check_modules(LIBUDEV REQUIRED libudev)

add_compile_options(-Wall -Wextra)

if (WITH_SERVER)
  message("Building server")
  # pkg_check_modules(LIBEVDEV REQUIRED libevdev)
  pkg_check_modules(LIBUUID REQUIRED uuid)
  add_executable(hidpserver hidp_net.cc hidp_proto.cc hidp_device.cc hidp_server.cc hidp_common.cc)
  target_compile_definitions(hidpserver PUBLIC -DWITH_UDEV -DWITH_UUID -DWITH_INPUTDEVICE_MONITOR)
  target_include_directories(hidpserver PUBLIC ${LIBUDEV_INCLUDE_DIRS})
  target_include_directories(hidpserver PUBLIC ${LIBUUID_INCLUDE_DIRS})
  target_link_libraries(hidpserver ${LIBUDEV_LIBRARIES})
  target_link_libraries(hidpserver ${LIBUUID_LIBRARIES})
endif()

if (WITH_CLIENT)
  message("Building client")
  add_executable(hidpclient hidp_net.cc hidp_proto.cc hidp_device.cc hidp_client.cc hidp_common.cc)
endif()

if (WITH_TEST)
  message("Building test")
  add_executable(hid_cat_test test.cpp)
  target_include_directories(hidpclient PUBLIC ${LIBUDEV_INCLUDE_DIRS})
  target_link_libraries(hidpclient ${LIBUDEV_LIBRARIES})
endif()
